bsp-sre-gitops2/apps/ASM/messaging/US/dev/gateway.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: gateway
  namespace: istio-system
spec:
  servers:
  - hosts:
    - msg-gtw-dev.ncrcloud.com
    - msg-test-asm-us-dev.ncrcloud.com
    - messaging-cnm-us-dev.ncrcloud.com
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      privateKey: /etc/istio/ingressgateway-certs/tls.key
      serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
